--- a/src/CIAPI.AspNet.Authentication/Body.html
+++ b/src/CIAPI.AspNet.Authentication/Body.html
@@ -1,3 +1,6 @@
-﻿<div id="authentication">
-    <h1>Auth here</h1>
-</div>
+﻿<div id="AuthenticationWidget_{clientId}" style="width: {width}"></div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#AuthenticationWidget_{clientId}').CIAPI_widget_AuthenticationWidget();
+    });
+</script>
