Enable communication with real CIAPI servers

--- a/src/CIAPI.AspNet.Controls/Authentication/Body.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/Body.html
@@ -2,6 +2,7 @@
 <script type="text/javascript">
     $("#customAuthWidgetTemplate").template("customAuthWidgetTemplate"); //compile & name the template
     $(document).ready(function () {
+        CIAPI.connection.ServiceUri = "{serviceUri}";
         $('#AuthenticationWidget_{clientId}').CIAPI_widget_AuthenticationWidget(
         {
             width: '{width}',
