--- a/src/CIAPI.AspNet.Controls/Authentication/Body.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/Body.html
@@ -1,10 +1,12 @@
 ﻿<div id="AuthenticationWidget_{clientId}"></div>
 <script type="text/javascript">
-    $("#customAuthWidgetTemplate").template("customAuthWidgetTemplate"); //compile & name the template
     $(document).ready(function () {
-        CIAPI.connection.ServiceUri = "{serviceUri}";
+        CIAPI.connection.ServiceUri = CIAPI.connection.ServiceUri || "{serviceUri}";
+
+        $("#AuthenticationWidgetTemplate_{clientId}").template("AuthenticationWidgetTemplate_{clientId}"); //compile & name the template
         $('#AuthenticationWidget_{clientId}').CIAPI_widget_AuthenticationWidget(
         {
+            template: "AuthenticationWidgetTemplate_{clientId}",
             width: '{width}',
             afterLogOn: function (data) {
                 {afterLogOn}
@@ -14,5 +16,49 @@
             }
         });
     });
+</script>
+<script id="AuthenticationWidgetTemplate_{clientId}" type="text/x-jquery-tmpl">
+    <div class="ui-ciapi-authentication ui-widget ui-widget-content ui-corner-all">
+        <div class="ui-ciapi-logon-view ui-corner-all" data-bind="visible: activeView() === 'LogOn'">
+            <div class="ui-ciapi-authentication-content ui-widget-content ui-corner-top">
+                <div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
+                    <h3>Log On</h3>
+                </div>
+                <p class="ui-state-error" data-bind="text: errorMessage, visible: errorMessage().length > 0"></p>
+                <form class="ui-ciapi-authentication-form">
+                <fieldset>
+                    <label for="username">UserName</label>
+
+                    <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
+                        <input type="text"
+                               name="username"
+                               id="username"
+                               data-bind="value: username"/>
+                    </div>
+                    <label for="password">Password</label>
+
+                    <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
+                        <input type="password"
+                               name="password"
+                               id="password"
+                               data-bind="value: password"/>
+                    </div>
+
+                </fieldset>
+                </form>
+            </div>
+            <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix ui-corner-bottom">
+                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOn">Log In</button>
+            </div>
+        </div>
+        <div class="ui-ciapi-logoff-view  ui-corner-all" data-bind="visible: activeView() === 'LogOff'">
+            <div class="ui-ciapi-authentication-content ui-widget-content">
+                <p>You are logged in as <span data-bind="text: username"/></p>
+            </div>
+            <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix">
+                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOff">Log Out</button>
+            </div>
+        </div>
+    </div>
 </script>
 
