--- a/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
@@ -24,20 +24,22 @@
                 <p class="ui-state-error" data-bind="text: errorMessage, visible: errorMessage().length > 0"></p>
                 <form class="ui-ciapi-authentication-form">
                 <fieldset>
-                    <label for="username">UserName</label>
+                    <label for="username">{UsernameText}</label>
 
                     <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
                         <input type="text"
                                name="username"
                                id="username"
+                               class="required inputFields"
                                data-bind="value: username"/>
                     </div>
-                    <label for="password">Password</label>
+                    <label for="password">{PasswordText}</label>
 
                     <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
                         <input type="password"
                                name="password"
                                id="password"
+                               class="required inputFields"
                                data-bind="value: password"/>
                     </div>
 
@@ -45,15 +47,15 @@
                 </form>
             </div>
             <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix ui-corner-bottom">
-                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOn">Log In</button>
+                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOn">{LogInButtonText}</button>
             </div>
         </div>
         <div class="ui-ciapi-logoff-view  ui-corner-all" data-bind="visible: activeView() === 'LogOff'">
             <div class="ui-ciapi-authentication-content ui-widget-content">
-                <p>You are logged in as <span data-bind="text: username"/></p>
+                <p>{LoggedInAsText}<span data-bind="text: username"/></p>
             </div>
             <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix">
-                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOff">Log Out</button>
+                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOff">{LogOutButtonText}</button>
             </div>
         </div>
     </div>
