--- a/src/CIAPI.AspNet.Controls/Authentication/AuthenticationStatus.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/AuthenticationStatus.html
@@ -1,46 +1,49 @@
-﻿<div id="AuthenticationStatusWidget_{clientId}"></div>
+﻿<div id="AuthenticationStatusWidget_<%=clientId%>"></div>
 <script type="text/javascript">
     $(document).ready(function () {
-        CIAPI.connection.ServiceUri = CIAPI.connection.ServiceUri || "{serviceUri}";
+        $.widget.culture('<%=UiCulture%>');
 
-        $("#{clientId}template").template("template{clientId}"); //compile & name the template
-        $('#AuthenticationStatusWidget_{clientId}').CIAPI_widget_AuthenticationWidget(
+        CIAPI.connection.ServiceUri = "<%=serviceUri%>";
+
+        $("#<%=clientId%>template").template("template<%=clientId%>"); //compile & name the template
+        $('#AuthenticationStatusWidget_<%=clientId%>').CIAPI_widget_AuthenticationWidget(
         {
-            template: 'template{clientId}',
-            width: '{width}',
+            template: 'template<%=clientId%>',
+            width: '<%=width%>',
             afterLogOff: function (data) {
-                {afterLogOff}
-            }
+                <%=afterLogOff%>
+            },
+            translations: <%=translations%>
         });
     });
 </script>
-<script id="{clientId}template" type="text/x-jquery-tmpl">
+<script id="<%=clientId%>template" type="text/x-jquery-tmpl">
     <div class="ui-ciapi-authentication-status">
         <p class="ui-state-error" data-bind="text: errorMessage, visible: errorMessage().length > 0"></p>
         <div class="ui-ciapi-logon-view" data-bind="visible: activeView() === 'LogOn'">    
             <div class="loginbtn">
-                <a href="{LogOnUri}" class="globallogin">
-                    <span>{LogInButtonText}</span>
+                <a href="<%=LogOnUri%>" class="globallogin">
+                    <span>${logon}</span>
                 </a>
             </div>
             <div class="applynowbtn">
-                <a href="{ApplyNowUri}" class="globalapply">
-                    <span>{ApplyNowButtonText}</span>
+                <a href="<%=ApplyNowUri%>" class="globalapply">
+                    <span>${apply_now}</span>
                 </a>
             </div>
         </div>
         <div class="ui-ciapi-logoff-view" data-bind="visible: activeView() === 'LogOff'">            
             <div class="loggedInUsername">
-                {LoggedInAsText}<span data-bind="text: username"/>
+                ${you_are_logged_in_as}<span data-bind="text: username"/>
             </div>
             <div class="logoutBtn">
                 <a href="#" data-bind="click: doLogOff" class="logout">
-                    <span>{LogOutButtonText}</span>
+                    <span>${logout}</span>
                 </a>
             </div>
             <div class="launchPlatformBtn">
-                <a href="{LaunchPlatformUri}" onclick="javascript:window.open('{LaunchPlatformUri}', '', 'width=975,height=575'); return false;" class="launchPlatform">
-                    <span>{LaunchPlatformButtonText}</span>
+                <a href="<%=LaunchPlatformUri%>" onclick="javascript:window.open('<%=LaunchPlatformUri%>', '', 'width=975,height=575'); return false;" class="launchPlatform">
+                    <span>${launch_platform}</span>
                 </a>
             </div>
         </div>
