--- a/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
@@ -57,7 +57,7 @@
                 <p>${you_are_logged_in_as}<span data-bind="text: username"/></p>
             </div>
             <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix">
-                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOff">${logoff}</button>
+                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOff">${logout}</button>
             </div>
         </div>
     </div>
