--- a/src/CIAPI.AspNet.Controls/Authentication/AuthenticationStatus.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/AuthenticationStatus.html
@@ -1,5 +1,11 @@
 ﻿<div id="AuthenticationStatusWidget_<%=clientId%>"></div>
 <script type="text/javascript">
+    var <%=clientId%>_launchPlatform = function()
+    {
+        var url = $('#AuthenticationStatusWidget_<%=clientId%>').CIAPI_widget_AuthenticationWidget('replaceTokens', '<%=LaunchPlatformUri%>'); 
+        window.open(url, '', 'width=975,height=575');
+    }
+
     $(document).ready(function () {
         $.widget.culture('<%=UiCulture%>');
 
@@ -34,7 +40,7 @@
         </div>
         <div class="ui-ciapi-logoff-view" data-bind="visible: activeView() === 'LogOff'">            
             <div class="loggedInUsername">
-                ${you_are_logged_in_as}<span data-bind="text: username"/>
+                ${you_are_logged_in_as} <span data-bind="text: username"/>
             </div>
             <div class="logoutBtn">
                 <a href="#" data-bind="click: doLogOff" class="logout">
@@ -42,7 +48,7 @@
                 </a>
             </div>
             <div class="launchPlatformBtn">
-                <a href="#" onclick="javascript:var url=$('#AuthenticationStatusWidget_<%=clientId%>').CIAPI_widget_AuthenticationWidget('replaceTokens','<%=LaunchPlatformUri%>'); window.open(url, '', 'width=975,height=575'); return false;" class="launchPlatform">
+                <a href="#" onclick="<%=clientId%>_launchPlatform(); return false;" class="launchPlatform">
                     <span>${launch_platform}</span>
                 </a>
             </div>
