--- a/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
+++ b/src/CIAPI.AspNet.Controls/Authentication/AuthenticationWidget.html
@@ -28,29 +28,23 @@
                 <form class="ui-ciapi-authentication-form">
                 <fieldset>
                     <label for="username">${username}</label>
-                    <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
-                        <input type="text"
-                               name="username"
-                               id="username"
-                               class="inputFields"
-                               data-bind="value: username"/>
-                    </div>
+                    <input type="text"
+                           name="username"
+                           id="username"
+                           class="inputFields ui-widget-content ui-corner-all"
+                           data-bind="value: username"/>
                     <label for="password">${password}</label>
-
-                    <div class="ui-ciapi-authentication-input ui-corner-all ui-widget-content">
-                        <input type="password"
-                               name="password"
-                               id="password"
-                               class="inputFields"
-                               data-bind="value: password"/>
-                    </div>
-
+                    <input type="password"
+                           name="password"
+                           id="password"
+                           class="inputFields ui-widget-content ui-corner-all"
+                           data-bind="value: password"/>
                 </fieldset>
-                </form>
             </div>
             <div class="ui-ciapi-authentication-buttonpane ui-widget-content ui-helper-clearfix ui-corner-bottom">
-                <button class="ui-ciapi-authentication-button" data-bind="click: doLogOn">${logon}</button>
+                <button class="ui-ciapi-authentication-button" type="submit" data-bind="click: doLogOn">${logon}</button>
             </div>
+            </form>
         </div>
         <div class="ui-ciapi-logoff-view  ui-corner-all" data-bind="visible: activeView() === 'LogOff'">
             <div class="ui-ciapi-authentication-content ui-widget-content">
